Every page something

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       <div class="container">
         <div class="rb-group">
           <h1><strong>Home Design-RB'</strong></h1>
-          <button type="button" class="btn btn-dark rb-btn"><a href="./index.html" target="_blank">Click <i
-                class="fa-solid fa-check"></i></a></button>
+          <button type="button" class="btn btn-light rb-btn"><a href="./index.html" target="_blank">Click
+              Me</a></button>
         </div>
       </div>
     </div>
