--- a/html/services.html
+++ b/html/services.html
@@ -20,7 +20,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/navbar-icon.jpg"
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"
             class="rb-navbar-icon"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
