Add some Comments , change something in every slide, etc

--- a/html/designers.html
+++ b/html/designers.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Designers</title>
-  <link rel="stylesheet" href="../css/designers.css">
   <link rel="icon" href="../fotot/designers-icon.jpg">
+  <link rel="stylesheet" href="../css/designers.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -25,7 +25,7 @@
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+        <div class="offcanvas offcanvas-end bg-white" tabindex="-1" id="offcanvasDarkNavbar"
           aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
@@ -72,20 +72,17 @@
                 <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
                     class="fa-solid fa-paint-roller"></i> Services</a>
               </li>
-              </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
                     class="fa-regular fa-clipboard"></i> Terms</a>
               </li>
+              <li class="rb-nav-item">
+                <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
+                    class="fa-solid fa-address-book"></i> Contact</a>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-regular fa-address-book"></i>
-                  Contact</a>
-              </li>
-              </li>
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a>
-              </li>
+                <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i>
+                  Login</a>
               </li>
             </ul>
           </div>
@@ -208,7 +205,7 @@
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
+              <a href="https://www.github.com/" class="text-white text-decoration-none">GitHub</a>
             </p>
             <div class="social-icons-wrapper">
               <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
@@ -229,7 +226,7 @@
       </div>
     </footer>
   </footer>
-
+  
 </body>
 
 </html>
