--- a/html/experience.html
+++ b/html/experience.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Experience</title>
-  <link rel="stylesheet" href="../css/experience.css">
   <link rel="icon" href="../fotot/experience-icon.jpg">
+  <link rel="stylesheet" href="../css/experience.css">
   <script src="../js/experience.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
@@ -26,7 +26,7 @@
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+        <div class="offcanvas offcanvas-end bg-white" tabindex="-1" id="offcanvasDarkNavbar"
           aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
@@ -70,23 +70,20 @@
                 </div>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i>
-                  Services</a>
-              </li>
-              </li>
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i>
-                  Terms</a>
-              </li>
+                <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
+                    class="fa-solid fa-paint-roller"></i> Services</a>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i>
-                  Contact</a>
-              </li>
+                <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
+                    class="fa-regular fa-clipboard"></i> Terms</a>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a>
+                <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
+                    class="fa-solid fa-address-book"></i> Contact</a>
               </li>
+              <li class="rb-nav-item">
+                <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i>
+                  Login</a>
               </li>
             </ul>
           </div>
@@ -94,6 +91,7 @@
       </div>
     </nav>
   </header>
+
 
   <!--Section-->
   <section class="rb-section-experience">
@@ -211,7 +209,7 @@
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
+              <a href="https://www.github.com/" class="text-white text-decoration-none">GitHub</a>
             </p>
             <div class="social-icons-wrapper">
               <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
