--- a/html/history.html
+++ b/html/history.html
@@ -26,7 +26,7 @@
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+        <div class="offcanvas offcanvas-end bg-white" tabindex="-1" id="offcanvasDarkNavbar"
           aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
@@ -70,23 +70,20 @@
                 </div>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i>
-                  Services</a>
-              </li>
-              </li>
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i>
-                  Terms</a>
-              </li>
+                <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
+                    class="fa-solid fa-paint-roller"></i> Services</a>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i>
-                  Contact</a>
+                <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
+                    class="fa-regular fa-clipboard"></i> Terms</a>
               </li>
+              <li class="rb-nav-item">
+                <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
+                    class="fa-solid fa-address-book"></i> Contact</a>
               </li>
-              <li ckass="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a>
-              </li>
+              <li class="rb-nav-item">
+                <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i>
+                  Login</a>
               </li>
             </ul>
           </div>
@@ -94,6 +91,7 @@
       </div>
     </nav>
   </header>
+
 
   <!--Section-->
   <section class="rb-section-history">
@@ -114,7 +112,8 @@
             generations earlier. Houses were built with open floor plan, high ceilings, bonus rooms, and even home
             theaters. This makes these houses stand out in the architectural.</p>
           <button type="button" class="btn btn-dark rb-btn"><a
-              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Click</a></button>
+              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Read
+              More</a></button>
         </div>
       </div>
       <div class="rb-card">
@@ -125,7 +124,8 @@
             thermostat, and open the blinds through an app. So home appliances have become more and more connected,
             making life easier and more modern, paving the way for a future.</p>
           <button type="button" class="btn btn-dark rb-btn"><a
-              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Click</a></button>
+              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Read
+              More</a></button>
         </div>
       </div>
       <div class="rb-card">
@@ -137,7 +137,7 @@
             suited to everyday needs. The design of the house marks changes in 2023, while innovations are announced for
             2024.</p>
           <button type="button" class="btn btn-dark rb-btn"><a
-              href="https://www.bhg.com/living-room-trends-7552960">Click</a></button>
+              href="https://www.bhg.com/living-room-trends-7552960">Read More</a></button>
         </div>
       </div>
       <div class="rb-text">
@@ -151,7 +151,8 @@
             brezave më parë. Shtëpitë u ndërtuan me planimetri te hapura, tavane të larta, dhoma bonus, madje edhe
             kinema shtëpiake. Kjo bën që këto shtëpi të shkelqejnë në skenën arkitektonike.</p>
           <button type="button" class="btn btn-dark rb-btn"><a
-              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Klikoni</a></button>
+              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Lexoni më
+              shumë</a></button>
         </div>
       </div>
       <div class="rb-card">
@@ -163,7 +164,8 @@
             janë bërë gjithnjë e më të lidhura, duke e bërë jetën më të lehtë dhe më moderne, duke hapur rrugen edhe për
             një të ardhme.</p>
           <button type="button" class="btn btn-dark rb-btn"><a
-              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Klikoni</a></button>
+              href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Lexoni më
+              shumë</a></button>
         </div>
       </div>
       <div class="rb-card">
@@ -175,7 +177,7 @@
             zgjuar dhe më të përshtatshme për nevojat e perditshme. Dizajni i shtëpisë shenon ndryshime në 2023, ndersa
             për 2024 paralajmrohen risi.</p>
           <button type="button" class="btn btn-dark rb-btn"><a
-              href="https://www.bhg.com/living-room-trends-7552960">Klikoni</a></button>
+              href="https://www.bhg.com/living-room-trends-7552960">Lexoni më shumë</a></button>
         </div>
       </div>
     </div>
@@ -228,7 +230,7 @@
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
+              <a href="https://www.github.com/" class="text-white text-decoration-none">GitHub</a>
             </p>
             <div class="social-icons-wrapper">
               <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
