--- a/html/about.html
+++ b/html/about.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="stylesheet" href="../css/about.css">
   <link rel="icon" href="../fotot/about-icon.jpg">
-  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="../css/about.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -20,14 +20,12 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img src="../fotot/navbar-icon.jpg" class="rb-navbar-icon">
-        </a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg" class="rb-navbar-icon"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+        <div class="offcanvas offcanvas-end bg-white" tabindex="-1" id="offcanvasDarkNavbar"
           aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
@@ -74,21 +72,17 @@
                 <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
                     class="fa-solid fa-paint-roller"></i> Services</a>
               </li>
-              </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
                     class="fa-regular fa-clipboard"></i> Terms</a>
-              </li>
               </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
                     class="fa-solid fa-address-book"></i> Contact</a>
               </li>
-              </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i>
                   Login</a>
-              </li>
               </li>
             </ul>
           </div>
@@ -115,7 +109,7 @@
                 carefully selected to reflect your taste and preferences.
               </p>
               <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"><button
-                  type="button" class="rb-button">Click me</button></a>
+                  type="button" class="rb-button">Read More</button></a>
             </div>
           </div>
         </div>
@@ -170,7 +164,7 @@
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
+              <a href="https://www.github.com/" class="text-white text-decoration-none">GitHub</a>
             </p>
             <div class="social-icons-wrapper">
               <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
