--- a/html/contact.html
+++ b/html/contact.html
@@ -5,8 +5,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Contact</title>
-   <link rel="stylesheet" href="../css/contact.css">
    <link rel="icon" href="../fotot/contact-icon.jpg">
+   <link rel="stylesheet" href="../css/contact.css">
    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
    <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -25,7 +25,7 @@
                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+            <div class="offcanvas offcanvas-end bg-white" tabindex="-1" id="offcanvasDarkNavbar"
                aria-labelledby="offcanvasDarkNavbarLabel">
                <div class="offcanvas-header">
                   <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
@@ -45,7 +45,8 @@
                                  data-bs-toggle="dropdown"></a>
                               <ul class="dropdown-menu">
                                  <li><a class="dropdown-item" href="../html/video.html"><i
-                                          class="fa-solid fa-file-video"></i> Video</a></li>
+                                          class="fa-solid fa-file-video"></i>
+                                       Video</a></li>
                               </ul>
                            </div>
                         </div>
@@ -63,9 +64,11 @@
                                  <li><a class="dropdown-item" href="../html/history.html"><i
                                           class="fa-solid fa-clock-rotate-left"></i> History </a></li>
                                  <li><a class="dropdown-item" href="../html/designers.html"><i
-                                          class="fa-solid fa-table"></i> Designers</a></li>
+                                          class="fa-solid fa-table"></i>
+                                       Designers</a></li>
                                  <li><a class="dropdown-item" href="../html/experience.html"><i
-                                          class="fa-solid fa-lightbulb"></i> Experience</a></li>
+                                          class="fa-solid fa-lightbulb"></i>
+                                       Experience</a></li>
                               </ul>
                            </div>
                         </div>
@@ -74,21 +77,18 @@
                         <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
                               class="fa-solid fa-paint-roller"></i> Services</a>
                      </li>
-                     </li>
                      <li class="rb-nav-item">
                         <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
                               class="fa-regular fa-clipboard"></i> Terms</a>
-                     </li>
                      </li>
                      <li class="rb-nav-item">
                         <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
                               class="fa-solid fa-address-book"></i> Contact</a>
                      </li>
-                     </li>
                      <li class="rb-nav-item">
                         <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i
-                              class="fa-regular fa-user"></i> Login</a>
-                     </li>
+                              class="fa-regular fa-user"></i>
+                           Login</a>
                      </li>
                   </ul>
                </div>
@@ -96,6 +96,7 @@
          </div>
       </nav>
    </header>
+
 
    <!--Section-->
    <section>
@@ -175,7 +176,7 @@
                      <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
                   </p>
                   <p>
-                     <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
+                     <a href="https://www.github.com/" class="text-white text-decoration-none">GitHub</a>
                   </p>
                   <div class="social-icons-wrapper">
                      <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
@@ -196,7 +197,7 @@
          </div>
       </footer>
    </footer>
-
+   
 </body>
 
 </html>
