--- a/html/services.html
+++ b/html/services.html
@@ -20,13 +20,12 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"
-            class="rb-navbar-icon"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg" class="rb-navbar-icon"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+        <div class="offcanvas offcanvas-end bg-white" tabindex="-1" id="offcanvasDarkNavbar"
           aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
@@ -73,21 +72,17 @@
                 <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
                     class="fa-solid fa-paint-roller"></i> Services</a>
               </li>
-              </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
                     class="fa-regular fa-clipboard"></i> Terms</a>
-              </li>
               </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
                     class="fa-solid fa-address-book"></i> Contact</a>
               </li>
-              </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i>
                   Login</a>
-              </li>
               </li>
             </ul>
           </div>
@@ -220,7 +215,7 @@
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
+              <a href="https://www.github.com/" class="text-white text-decoration-none">GitHub</a>
             </p>
             <div class="social-icons-wrapper">
               <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
