--- a/html/terms.html
+++ b/html/terms.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms</title>
-  <link rel="stylesheet" href="../css/terms.css">
   <link rel="icon" href="../fotot/terms-icon.jpg">
+  <link rel="stylesheet" href="../css/terms.css">
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
-  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
 
 <body id="rb-home-design">
@@ -25,7 +25,7 @@
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+        <div class="offcanvas offcanvas-end bg-white" tabindex="-1" id="offcanvasDarkNavbar"
           aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
@@ -72,21 +72,17 @@
                 <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
                     class="fa-solid fa-paint-roller"></i> Services</a>
               </li>
-              </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
                     class="fa-regular fa-clipboard"></i> Terms</a>
-              </li>
               </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
                     class="fa-solid fa-address-book"></i> Contact</a>
               </li>
-              </li>
               <li class="rb-nav-item">
                 <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i>
                   Login</a>
-              </li>
               </li>
             </ul>
           </div>
@@ -202,7 +198,7 @@
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
+              <a href="https://www.github.com/" class="text-white text-decoration-none">GitHub</a>
             </p>
             <div class="social-icons-wrapper">
               <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
